--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-<h1 style="text-align:center; font-family: sans-serif;">Maryam's Gallery</h1>
-<div style="text-align:center;">
-    <img src="marygpainting.jpg" style="width:100%; max-width:600px; border: 10px solid #fff; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
-    <p style="font-style:italic; margin-top:15px; font-family: serif; color: #555;">The Echo of 1000 Hours</p>
-</div>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Maryam's Art Gallery</title>
+    <style>
+        body { background-color: #1a1a1a; color: #eee; font-family: 'Segoe UI', sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; margin: 0; }
+        img { max-width: 80%; height: auto; border: 15px solid #2a2a2a; box-shadow: 0 10px 30px rgba(0,0,0,0.5); margin-top: 20px; }
+        h1 { letter-spacing: 2px; text-transform: uppercase; border-bottom: 2px solid #444; padding-bottom: 10px; }
+        p { font-style: italic; color: #888; margin-top: 20px; }
+    </style>
+</head>
+<body>
+    <h1>Maryam's Gallery</h1>
+    <img src="marygpainting.jpg" alt="Traditional Art by Maryam">
+    <p>"The Echo of 1000 Hours" - Traditional Media</p>
+</body>
+</html>
