--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,12 +11,12 @@
         nav { position: fixed; top: 0; width: 100%; background: rgba(5, 5, 5, 0.95); backdrop-filter: blur(10px); border-bottom: 1px solid #1a1a1a; z-index: 1000; }
         .nav-container { max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 12px 20px; }
         .logo-box { display: flex; align-items: center; gap: 12px; }
-        .logo-img { height: 45px; width: 45px; object-fit: cover; border-radius: 5px; } /* تنظیمات لوگوی جی‌پی‌جی */
+        .logo-img { height: 45px; width: 45px; object-fit: cover; border-radius: 5px; }
         .nav-links { display: flex; gap: 25px; }
         .nav-links a { color: #888; text-decoration: none; font-size: 11px; text-transform: uppercase; letter-spacing: 2px; transition: 0.3s; }
         .nav-links a:hover { color: #fff; }
 
-        /* Header */
+        /* Header - Modified as per request */
         header { text-align: center; margin: 80px 0 100px; }
         h1 { font-weight: 100; letter-spacing: 6px; text-transform: uppercase; font-size: 2.2em; margin-bottom: 15px; color: #fff; }
         .sub-title { color: #666; font-size: 11px; letter-spacing: 5px; text-transform: uppercase; }
@@ -30,7 +30,7 @@
         .art-info h3 { font-size: 12px; font-weight: 300; letter-spacing: 2px; margin: 0; color: #ddd; text-transform: uppercase; }
         .art-info p { color: #444; font-size: 10px; margin-top: 8px; text-transform: uppercase; }
 
-        /* About Mary G. Section */
+        /* About Section */
         .about-section { max-width: 800px; margin: 120px auto; padding: 0 20px; text-align: center; }
         .about-section h2 { font-weight: 100; letter-spacing: 6px; text-transform: uppercase; color: #fff; font-size: 2em; }
         .line { width: 60px; height: 1px; background: #444; margin: 25px auto 45px; }
@@ -58,7 +58,7 @@
     </nav>
 
     <header>
-        <h1>Welcome to Mary G.'s Portfolio</h1>
+        <h1>Welcome to Mary G.'s Website</h1>
         <div class="sub-title">Hyperrealism & Fine Art | UAE</div>
     </header>
     
@@ -88,4 +88,4 @@
     </footer>
 
 </body>
-</html>        
+</html>
