--- a/index.html
+++ b/index.html
@@ -1,41 +1,25 @@
-<section id="commissions" style="max-width: 1000px; margin: 120px auto; padding: 0 20px; text-align: center;">
-    <h2 style="font-weight: 100; letter-spacing: 6px; text-transform: uppercase; color: #fff; font-size: 2em;">Art Commissions</h2>
-    <div style="width: 60px; height: 1px; background: #444; margin: 25px auto 60px;"></div>
-    
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px;">
-        <div style="background: #0a0a0a; padding: 40px 20px; border: 1px solid #111;">
-            <div style="font-size: 24px; color: #444; margin-bottom: 20px;">01</div>
-            <h3 style="font-size: 14px; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 15px;">Consultation</h3>
-            <p style="color: #666; font-size: 12px; line-height: 1.8;">Share your vision and reference photos. We discuss size, medium, and the level of detail.</p>
-        </div>
-
-        <div style="background: #0a0a0a; padding: 40px 20px; border: 1px solid #111;">
-            <div style="font-size: 24px; color: #444; margin-bottom: 20px;">02</div>
-            <h3 style="font-size: 14px; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 15px;">Creation</h3>
-            <p style="color: #666; font-size: 12px; line-height: 1.8;">Using premium traditional materials, I meticulously bring your artwork to life with hyperrealistic precision.</p>
-        </div>
-
-        <div style="background: #0a0a0a; padding: 40px 20px; border: 1px solid #111;">
-            <div style="font-size: 24px; color: #444; margin-bottom: 20px;">03</div>
-            <h3 style="font-size: 14px; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 15px;">Delivery</h3>
-            <p style="color: #666; font-size: 12px; line-height: 1.8;">Professional packaging and secure shipping across the UAE and worldwide to ensure your art arrives safely.</p>
-        </div>
-    </div>
-
-    <div style="margin-top: 80px;">
-        <p style="color: #888; font-size: 13px; letter-spacing: 1px; margin-bottom: 30px;">Ready to start your custom masterpiece?</p>
-        <a href="https://wa.me/971509551870" target="_blank" style="display: inline-block; padding: 18px 50px; background: #fff; color: #000; text-decoration: none; font-size: 11px; text-transform: uppercase; letter-spacing: 2px; font-weight: bold; transition: 0.3s;">Message on WhatsApp</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mary G. | Fine Art Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        body { background-color: #050505; color: #fff; font-family: 'Inter', Arial, sans-serif; margin: 0; padding-top: 100px; scroll-behavior: smooth; }
         
-        <div style="margin-top: 30px;">
-            <p style="color: #444; font-size: 11px; letter-spacing: 1px;">OR EMAIL AT</p>
-            <a href="mailto:Maryg.Art2022@Gmail.com" style="color: #666; text-decoration: none; font-size: 13px;">Maryg.Art2022@Gmail.com</a>
-        </div>
-    </div>
-</section>
+        /* Navigation */
+        nav { position: fixed; top: 0; width: 100%; background: rgba(5, 5, 5, 0.98); backdrop-filter: blur(15px); border-bottom: 1px solid #1a1a1a; z-index: 1000; }
+        .nav-container { max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 15px 25px; }
+        .logo-box { display: flex; align-items: center; gap: 15px; }
+        .logo-img { height: 50px; width: 50px; border-radius: 4px; object-fit: cover; }
+        .nav-links a { color: #aaa; text-decoration: none; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; margin-left: 30px; transition: 0.3s; }
+        .nav-links a:hover { color: #fff; }
 
-<footer id="contact" style="margin-top: 100px; text-align: center; padding: 80px 20px; border-top: 1px solid #111; background: #000;">
-    <div style="margin-bottom: 30px;">
-        <img src="maryglogo.jpg" style="height: 50px; width: 50px; border-radius: 5px; filter: grayscale(100%);">
-    </div>
-    <p style="color: #444; font-size: 11px; letter-spacing: 2px; text-transform: uppercase;">© 2026 Mary G. Fine Art | Based in Dubai, UAE</p>
-</footer>
+        /* Header */
+        header { text-align: center; margin: 100px 0; }
+        h1 { font-weight: 200; letter-spacing: 8px; text-transform: uppercase; font-size: 3em; }
+        .sub-title { color: #888; font-size: 15px; letter-spacing: 6px; text-transform: uppercase; }
+
+        /* About Section */
+        .about-section { max-width: 850px; margin: 150px auto; padding: 0
