--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="about-container">
         <div class="about-image">
-            <img src="mary-portrait.jpg" alt="Mary G.">
+            <img src="marygportrait.jpg" alt="Mary G.">
         </div>
         <div class="about-content">
             <h2>About Mary G.</h2>
