--- a/about-mary.html
+++ b/about-mary.html
@@ -64,7 +64,7 @@
                 <br><br>
                 Her mastery extends beyond a single medium, encompassing <strong>Charcoal, Color Pencil, Acrylic, Oil Painting, and Mix Media</strong>. Each piece is a meticulous journey through detail, light, and shadow, reflecting a lifelong dedication to the craft of fine art.
             </p>
-            <img src="marygsignature.jpg" alt="Mary G. Signature" class="signature-img">
+            <img src="marygsignature.png" alt="Mary G. Signature" class="signature-img">
         </div>
     </div>
 
