--- a/portfolio.html
+++ b/portfolio.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Maryam Art</title>
+    <title>Maryam Art Gallery</title>
     <style>
-        body { background: #000; color: #fff; font-family: sans-serif; margin: 0; text-align: center; }
+        body { background: #000; color: #fff; font-family: 'Segoe UI', sans-serif; margin: 0; text-align: center; }
         nav { padding: 20px; border-bottom: 1px solid #222; }
-        nav a { color: #888; text-decoration: none; margin: 0 15px; }
-        .filter-nav { padding: 20px; display: flex; flex-wrap: wrap; justify-content: center; gap: 8px; }
-        .btn { background: #111; border: 1px solid #444; color: #aaa; padding: 10px 18px; cursor: pointer; border-radius: 20px; font-size: 12px; }
+        nav a { color: #888; text-decoration: none; margin: 0 15px; font-size: 14px; }
+        .filter-nav { padding: 30px 10px; display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+        .btn { background: #111; border: 1px solid #444; color: #aaa; padding: 10px 20px; cursor: pointer; border-radius: 30px; font-size: 12px; transition: 0.3s; text-transform: uppercase; }
         .btn:hover, .btn.active { border-color: #fff; color: #fff; background: #222; }
-        .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 15px; padding: 20px; max-width: 1400px; margin: 0 auto; }
+        .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; padding: 20px; max-width: 1400px; margin: 0 auto; }
         .card { background: #111; border-radius: 12px; overflow: hidden; aspect-ratio: 1/1; position: relative; display: block; }
         .card img { width: 100%; height: 100%; object-fit: cover; }
-        .tag { position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.8); padding: 5px 10px; font-size: 10px; border-radius: 5px; }
+        .tag { position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.8); padding: 5px 12px; font-size: 10px; border-radius: 6px; text-transform: uppercase; }
     </style>
 </head>
 <body>
@@ -22,72 +22,78 @@
 <nav><a href="index.html">HOME</a> <a href="portfolio.html" style="color:#fff; font-weight:bold;">PORTFOLIO</a></nav>
 
 <div class="filter-nav">
-    <button class="btn active" onclick="filterArt('all')">ALL</button>
-    <button class="btn" onclick="filterArt('acrylic')">ACRYLIC</button>
-    <button class="btn" onclick="filterArt('oil')">OIL</button>
-    <button class="btn" onclick="filterArt('charcoal')">CHARCOAL</button>
-    <button class="btn" onclick="filterArt('graphite')">GRAPHITE</button>
-    <button class="btn" onclick="filterArt('pencil')">PENCILS</button>
-    <button class="btn" onclick="filterArt('leather')">LEATHER</button>
-    <button class="btn" onclick="filterArt('mix')">MIX MEDIA</button>
+    <button class="btn active" onclick="filterArt('all', event)">All</button>
+    <button class="btn" onclick="filterArt('acrylic', event)">Acrylic</button>
+    <button class="btn" onclick="filterArt('oil', event)">Oil</button>
+    <button class="btn" onclick="filterArt('charcoal', event)">Charcoal</button>
+    <button class="btn" onclick="filterArt('graphite', event)">Graphite</button>
+    <button class="btn" onclick="filterArt('pencil', event)">Pencils</button>
+    <button class="btn" onclick="filterArt('leather', event)">Leather</button>
+    <button class="btn" onclick="filterArt('mix', event)">Mix Media</button>
 </div>
 
-<div class="gallery" id="gallery">
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic1.JPG"><div class="tag">Acrylic</div></div>
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic2.JPG"><div class="tag">Acrylic</div></div>
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic3.JPG"><div class="tag">Acrylic</div></div>
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic4.JPG"><div class="tag">Acrylic</div></div>
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic5.JPG"><div class="tag">Acrylic</div></div>
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic6.JPG"><div class="tag">Acrylic</div></div>
-    <div class="card acrylic"><img src="Acrylic Paintings/marygacrylic7.JPG"><div class="tag">Acrylic</div></div>
+<div class="gallery">
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic1.JPG"><div class="tag">Acrylic</div></div>
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic2.JPG"><div class="tag">Acrylic</div></div>
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic3.JPG"><div class="tag">Acrylic</div></div>
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic4.JPG"><div class="tag">Acrylic</div></div>
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic5.JPG"><div class="tag">Acrylic</div></div>
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic6.JPG"><div class="tag">Acrylic</div></div>
+    <div class="card acrylic"><img src="Acrylic%20Paintings/marygacrylic7.JPG"><div class="tag">Acrylic</div></div>
 
-    <div class="card oil"><img src="Oil Paintings/marygoilpainting1.JPG"><div class="tag">Oil</div></div>
-    <div class="card oil"><img src="Oil Paintings/marygoilpainting2.JPG"><div class="tag">Oil</div></div>
-    <div class="card oil"><img src="Oil Paintings/marygoilpainting3.JPG"><div class="tag">Oil</div></div>
-    <div class="card oil"><img src="Oil Paintings/marygoilpainting4.JPG"><div class="tag">Oil</div></div>
+    <div class="card oil"><img src="Oil%20Paintings/marygoilpainting1.JPG"><div class="tag">Oil</div></div>
+    <div class="card oil"><img src="Oil%20Paintings/marygoilpainting2.JPG"><div class="tag">Oil</div></div>
+    <div class="card oil"><img src="Oil%20Paintings/marygoilpainting3.JPG"><div class="tag">Oil</div></div>
+    <div class="card oil"><img src="Oil%20Paintings/marygoilpainting4.JPG"><div class="tag">Oil</div></div>
 
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper1.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper2.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper3.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper4.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper5.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper6.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper7.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper8.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper9.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper10.JPG"><div class="tag">Charcoal</div></div>
-    <div class="card charcoal"><img src="Charcoal Realism/maryghyper11.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper1.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper2.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper3.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper4.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper5.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper6.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper7.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper8.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper9.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper10.JPG"><div class="tag">Charcoal</div></div>
+    <div class="card charcoal"><img src="Charcoal%20Realism/maryghyper11.JPG"><div class="tag">Charcoal</div></div>
 
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing1.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing2.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing3.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing4.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing5.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing6.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing7.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing8.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing9.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing10.JPG"><div class="tag">Graphite</div></div>
-    <div class="card graphite"><img src="Graphite Realism/marygdrawing11.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing1.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing2.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing3.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing4.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing5.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing6.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing7.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing8.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing9.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing10.JPG"><div class="tag">Graphite</div></div>
+    <div class="card graphite"><img src="Graphite%20Realism/marygdrawing11.JPG"><div class="tag">Graphite</div></div>
 
-    <div class="card pencil"><img src="Colored Pencils/marygpainting.JPG"><div class="tag">Pencil</div></div>
-    <div class="card pencil"><img src="Colored Pencils/marygpainting1.JPG"><div class="tag">Pencil</div></div>
-    <div class="card pencil"><img src="Colored Pencils/marygpainting2.JPG"><div class="tag">Pencil</div></div>
+    <div class="card pencil"><img src="Colored%20Pencils/marygpainting.JPG"><div class="tag">Pencil</div></div>
+    <div class="card pencil"><img src="Colored%20Pencils/marygpainting1.JPG"><div class="tag">Pencil</div></div>
+    <div class="card pencil"><img src="Colored%20Pencils/marygpainting2.JPG"><div class="tag">Pencil</div></div>
 
-    <div class="card leather"><img src="Leather & Textile Painting/marygleathertextilepainting1.JPG"><div class="tag">Leather</div></div>
-    <div class="card leather"><img src="Leather & Textile Painting/marygleathertextilepainting2.JPG"><div class="tag">Leather</div></div>
-    <div class="card leather"><img src="Leather & Textile Painting/marygleathertextilepainting3.JPG"><div class="tag">Leather</div></div>
-    <div class="card leather"><img src="Leather & Textile Painting/marygleathertextilepainting4.JPG"><div class="tag">Leather</div></div>
+    <div class="card leather"><img src="Leather%20&%20Textile%20Painting/marygleathertextilepainting1.JPG"><div class="tag">Leather</div></div>
+    <div class="card leather"><img src="Leather%20&%20Textile%20Painting/marygleathertextilepainting2.JPG"><div class="tag">Leather</div></div>
+    <div class="card leather"><img src="Leather%20&%20Textile%20Painting/marygleathertextilepainting3.JPG"><div class="tag">Leather</div></div>
+    <div class="card leather"><img src="Leather%20&%20Textile%20Painting/marygleathertextilepainting4.JPG"><div class="tag">Leather</div></div>
 
-    <div class="card mix"><img src="Mix Media/marygmixmedia.JPG"><div class="tag">Mix Media</div></div>
+    <div class="card mix"><img src="Mix%20Media/marygmixmedia.JPG"><div class="tag">Mix Media</div></div>
 </div>
 
 <script>
-    function filterArt(cat) {
-        document.querySelectorAll('.btn').forEach(b => b.classList.remove('active'));
-        event.target.classList.add('active');
-        document.querySelectorAll('.card').forEach(c => {
-            c.style.display = (cat === 'all' || c.classList.contains(cat)) ? 'block' : 'none';
+    function filterArt(category, event) {
+        const cards = document.querySelectorAll('.card');
+        const btns = document.querySelectorAll('.btn');
+        btns.forEach(btn => btn.classList.remove('active'));
+        event.currentTarget.classList.add('active');
+        cards.forEach(card => {
+            if (category === 'all' || card.classList.contains(category)) {
+                card.style.display = 'block';
+            } else {
+                card.style.display = 'none';
+            }
         });
     }
 </script>
